removed opencv dependency in cmake

--- a/camera_pose_calibration/CMakeLists.txt
+++ b/camera_pose_calibration/CMakeLists.txt
@@ -13,9 +13,7 @@ find_package(catkin REQUIRED COMPONENTS rospy
 										tf_conversions
 										tf2_ros
 										tf2_kdl
-										message_filters
-										OpenCV)
-
+										message_filters)
 
 add_message_files(
    FILES
