--- a/camera_pose_calibration/package.xml
+++ b/camera_pose_calibration/package.xml
@@ -28,7 +28,7 @@
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf2_kdl</build_depend>
   <build_depend>message_filters</build_depend>
-  <build_depend>opencv2</build_depend>
+  <build_depend>OpenCV</build_depend>
   
   <run_depend>geometry_msgs</run_depend>
   <run_depend>calibration_msgs</run_depend>
@@ -44,6 +44,6 @@
   <run_depend>tf2_ros</run_depend>
   <run_depend>tf2_kdl</run_depend>
   <run_depend>message_filters</run_depend>
-  <run_depend>opencv2</run_depend>
+  <run_depend>OpenCV</run_depend>
 
 </package>
